# e1071

pkg/e1071/: .Rbuildignore  DESCRIPTION  NAMESPACE  NEWS
pkg/e1071/R/: bclust.R  naiveBayes.R  svm.R  tune.R
pkg/e1071/inst/: NEWS.Rd
pkg/e1071/src/: Rsvm.c
pkg/e1071/work/patches/: svm.cpp.patch  svm.h.patch
trunk/e1071/: ChangeLog  DESCRIPTION  INDEX  NAMESPACE  NEWS  README  cleanup  configure  configure.ac  configure.in  test2
trunk/e1071/R/: Sweave.R  bclust.R  cluster.R  cmeans.R  fclustIndex.R  ica.R  kmeans.R  matchClasses.R  naiveBayes.R  pgm.R  pnm.R  print.fclust.R  rbridge.R  sparse.R  svm.R  tune.R  zzz.R  zzz.R.in
trunk/e1071/data/: 00Index
trunk/e1071/inst/: NEWS
trunk/e1071/inst/doc/: 00Index.dcf  svmdoc.Rnw
trunk/e1071/man/: Discrete.Rd  RTangle.Rd  RWeaveLatex.Rd  Sweave.Rd  bclust.Rd  bootstrap.lca.Rd  boxplot.bclust.Rd  classAgreement.Rd  cmeans.Rd  cshell.Rd  e1071-internal.Rd  hamming.distance.Rd  hamming.window.Rd  hanning.window.Rd  kmeans.Rd  kurtosis.Rd  lca.Rd  matchControls.Rd  moment.Rd  naiveBayes.Rd  performance.Rd  pgm.Rd  plot.cluster.Rd  plot.fclust.Rd  plot.stft.Rd  plot.svm.Rd  plot.tune.Rd  pnm.Rd  predict.cluster.Rd  predict.svm.Rd  rbridge.Rd  read.matrix.csr.Rd  read.octave.Rd  rwiener.Rd  scaclust.Rd  shortestPaths.Rd  skewness.Rd  sparsify.Rd  svm.Rd  tune.Rd  (+2 more)
trunk/e1071/src/: Makefile  Makevars.in  Rsvm.c  cmeans.c  cshell.c  pgm.c  pnm.c  scaclust.c  svm.cpp
